sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:10: error: not found: value j
    while(j<=i && v<getValeur(i-ecart)){
          ^