sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {

  var lgr = getNombreValeurs();
  var ecart = lgr/2;
  var v = 0 ;
  while(ecart>0){
	for(i<- 1 to lgr-1){
    v = getValeur(i);
    while(j<=i && v<getValeur(i-ecart)){
      copie(i-ecart,i-ecart+1);
      
    }
    setValeur(i-ecart+1,v)
  }
    ecart -= 1;
  }
  
}